# OreOrePythonScheme

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  call_example_add.py  call_example_cuda.py  call_example_cuda_driver.py  call_example_cuda_mix.py  call_example_cuda_runtime.py  call_example_numpy.py  example_with_numpy.py  main.cpp  main.py
mylibs/example_add/: CMakeLists.txt  mymodule.cpp
mylibs/example_cuda/: CMakeLists.txt  cuFunctionManager.cpp  mymodule.cpp
mylibs/example_cuda/include/: add_arrays_1d.h  print_array_1d.h
mylibs/example_cuda/kernels/: CMakeLists.txt  add.cu
mylibs/example_cuda_driver/: CMakeLists.txt  mymodule.cpp
mylibs/example_cuda_driver/driver_kernels/: CMakeLists.txt
mylibs/example_cuda_driver/include/: mycuda.h
mylibs/example_cuda_driver/src/: mycuda.cpp
mylibs/example_cuda_runtime/: CMakeLists.txt  mymodule.cpp
mylibs/example_cuda_runtime/include/: mycuda.h
mylibs/example_cuda_runtime/runtime_kernels/: CMakeLists.txt  thrust_add.cu  thrust_add.h
mylibs/example_cuda_runtime/src/: mycuda.cpp
mylibs/example_module/: CMakeLists.txt  mymodule.cpp
mylibs/example_module_with_numpy/: mymodule.cpp
mylibs/example_module_with_numpy/include/: print_array.h
mylibs/example_numpy/: CMakeLists.txt  mymodule.cpp
mylibs/example_numpy/include/: add_arrays_vec.h
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add.cpp  mymodule.cpp
test/: CMakeLists.txt
test/add/: CMakeLists.txt
test/example_add/: CMakeLists.txt  testA.cpp
